--- a/app/views/homepage/homepage.html
+++ b/app/views/homepage/homepage.html
@@ -1,8 +1,11 @@
 <div class="col-md-6 col-md-offset-3">
     <h3>Select city</h3>
+    <div class="form-group">
     <input 
         type="text" 
         ng-model="vm.selectedCity" 
-        uib-typeahead="city for city in vm.cities | filter:$viewValue | limitTo:8" 
-        class="form-control">
+        uib-typeahead="city for city in vm.cities | filter:$viewValue | limitTo:8"
+        class="form-control" />
+    </div>
+    <a href="#!/forecast" class="btn btn-primary" ng-click="vm.setCity(vm.selectedCity)">Get Forecast</button>
 </div>
